Fix overall main height issue & firefox date input layout issue

--- a/src/styles/inputFields.css
+++ b/src/styles/inputFields.css
@@ -84,6 +84,12 @@ option {
   padding: 20px 2px 20px 12px;
 }
 
+@-moz-document url-prefix() {
+  .input-field-normal input[type="date"] {
+    padding: 10px 2px 20px 12px;
+  }
+}
+
 .present-date {
   grid-column: 1/3;
 }
